Add configuration options for sorting deriving clauses and types
This adds two configuration options for sorting a) types in deriving
clauses, and b) deriving clauses themselves.

Fixes https://github.com/tweag/ormolu/issues/968

--- a/fourmolu.yaml
+++ b/fourmolu.yaml
@@ -22,3 +22,5 @@ reexports: []
 import-grouping: legacy
 local-modules: []
 sort-constraints: false
+sort-derived-classes: false
+sort-deriving-clauses: false
